# remote_e-ink_display

./: .gitignore  LICENSE  README.md
ble112/: ble112.hex  gatt.xml  hardware.xml  project-ble112.bgproj  variable_memory_usage.txt
firmware/: .mxproject  CMakeLists.txt  Makefile  remote_e-ink_display.ioc  toolchain.cmake
firmware/Core/Inc/: app.h  main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
firmware/Core/Src/: app.c  gpio.c  main.c  spi.c  stm32l0xx_it.c  syscalls.c  usart.c
hardware/: remote_e-ink_display-cache.lib  remote_e-ink_display.bak  remote_e-ink_display.pro  remote_e-ink_display.sch
hardware/libs/: remote_e-ink_display.lib
hardware/libs/remote_e-ink_display.pretty/: BLE112-A.kicad_mod  DEV_STM32L0538-DISCO.kicad_mod
scripts/: ble.py
